[GStreamer][DMABuf] AV1 video is broken with the dav1d decoder https://bugs.webkit.org/show_bug.cgi?id=258200

Reviewed by Xabier Rodriguez-Calvar.

The raw to GBM BO copy is now done using the GstVideoFrame API, which ensures that the frame pixels
are accessible according to the video frame format and video meta, this also slightly simplifies the code.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::pushDMABufToCompositor):

Canonical link: https://commits.webkit.org/265296@main